<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.abdallahmohammed.indextask1.ui.MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:weightSum="8"
       android:layout_height="wrap_content">


       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_weight="2">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/TextViewStyle1"
               android:text="@string/user_id"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/TextViewStyle1"
               android:text="@string/user_name"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/TextViewStyle1"
               android:text="@string/user_country"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/TextViewStyle1"
               android:text="@string/user_city"/>


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/TextViewStyle1"
               android:text="@string/user_address"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/TextViewStyle1"
               android:text="@string/user_mobile"/>



       </LinearLayout>

       <LinearLayout
           android:layout_weight="6"
           android:layout_width="0dp"
           android:orientation="vertical"
           android:layout_height="match_parent">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/user_id_TextView"
               style="@style/TextViewStyle2"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/user_name_TextView"
               style="@style/TextViewStyle2"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/user_country_TextView"
               style="@style/TextViewStyle2"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/user_city_TextView"
               style="@style/TextViewStyle2"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/user_address_TextView"
               style="@style/TextViewStyle2"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/user_mobile_TextView"
               style="@style/TextViewStyle2"

               />

       </LinearLayout>
   </LinearLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nofication_Button"
        android:id="@+id/get_notification_Button"
        android:layout_gravity="center"
        />

</LinearLayout>
